# telescreen

./: Cargo.toml  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  exec_with_muslrust
docker/app/: config.yml.tmpl
example/: config.yml
src/: lib.rs  main.rs  router.rs  telescreen_handler.rs
test/fixture/: invalid_config_1.yml  invalid_config_2.yml  invalid_config_3.yml  valid_config.yml
